# sqlheavy

./: meson.build
examples/: meson.build
sqlheavy/: meson.build  sqlheavy-blob-io-stream.vala  sqlheavy-common-function.vala  sqlheavy-database.vala  sqlheavy-query-result.vala  sqlheavy-queryable.vala  sqlheavy-record.vala  sqlheavy-table.vala  sqlheavy-transaction.vala  sqlheavy-user-functions.vala  sqlite3.vapi
